--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@ p{
     font-weight: 500;
     font-size: 18px;
     line-height: 22px;
+    text-align: center;
 }
 
 header{
@@ -52,9 +53,10 @@ header{
     padding-right: 0;
 }
 
-main{
+section{
     width: 941px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .first_view{
@@ -77,18 +79,115 @@ main{
 }
 
 .about_me{
-    position: absolute;
-    left: 0;
     width: 100%;
     padding-top: 120px;
     padding-bottom: 107px;
     background-color: #F6F6F6;
-    text-align: center;
 }
 
-.about_me h2{
+.about_me_text h2{
     margin-bottom: 30px;
 }
 
 .skills{
+    width: 100%;
+    padding-top: 91px;
+    padding-bottom: 110px;
+}
+
+.skills h2{
+    margin-bottom: 69px;
+}
+
+.skills p{
+    margin-bottom: 83px;
+}
+
+.skills_image_container{
+    display: flex;
+    justify-content: center;
+}
+
+.skills_image_container img{
+    margin-right: 90px;
+}
+
+.skills_image_container img:last-child{
+    margin-right: 0px;
+}
+
+.portfolio{
+    width: 100%;
+    padding-top: 112px;
+    padding-bottom: 96px;
+    margin: 0 auto;
+    background-color: #F6F6F6;
+}
+
+.portfolio h2{
+    margin-bottom: 50px;
+}
+
+.portfolio_item{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 99px;
+}
+
+.portfolio_item:last-child{
+    margin-bottom: 0;
+}
+
+.portfolio_item img{
+    width: 936px;
+    margin: 0 auto;
+    margin-bottom: 44px;
+}
+
+.portfolio_item a{
+    color: black;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.contacts{
+    padding-top: 114px;
+    margin-bottom: 85px;
+}
+
+.contacts h2{
+    margin-bottom: 40px;
+}
+
+.contacts p{
+    margin-bottom: 29px;
+}
+
+.contacts button{
+    font-size: 18px;
+    color: white;
+    background-color: black;
+    padding: 10px 29px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+footer{
+    margin: 0 auto;
+    padding-bottom: 123px;
+}
+
+.social_networks{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 45px;
+}
+
+.social_networks img{
+    margin-right: 61px;
+}
+
+.social_networks img:last-child{
+    margin-right: 0;
 }
