--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,7 +139,8 @@ section{
 }
 
 .portfolio_item img{
-    width: 936px;
+    width: 70%;
+    min-width: 316px;
     margin: 0 auto;
     margin-bottom: 44px;
 }
@@ -190,4 +191,44 @@ footer{
 
 .social_networks img:last-child{
     margin-right: 0;
+}
+
+
+/* для мобильной версии */
+@media (max-width:980px) {
+    .text_info{
+        margin-left: 20px;
+        flex-direction: column;
+        text-align: left;
+        align-items: normal;
+    }
+
+    .text_info h1{
+        margin-bottom: 23px;
+    }
+
+    .text_info p{
+        text-align: left;
+    }
+
+    section{
+        width: 100%;
+    }
+
+    .skills_image_container{
+        display: block;
+        width: 167px;
+        margin: 0 auto;
+    }
+
+    .skills_image_container img{
+        width: 166px;
+        margin-bottom: 81px;
+        margin-right: 0;
+    }
+
+    .skills_image_container img:last-child{
+        margin-bottom: 0;
+    }
+
 }
