--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,11 @@ header{
     margin-bottom: 33px;
 }
 
+.header_links{
+    padding-bottom: 31px;
+    border-bottom: 1px solid #828282;
+}
+
 .header__link{
     font-weight: 700;
     font-size: 18px;
@@ -41,7 +46,7 @@ header{
     color: #828282;
 
     margin-bottom: 32px;
-    border-bottom: 1px solid #828282;
+    
     margin-right: 155px;
 }
 
@@ -50,7 +55,7 @@ header{
 }
 
 .header__link:last-child{
-    padding-right: 0;
+    margin-right: 0;
 }
 
 section{
