Add burger menu

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,33 @@ header{
     margin-bottom: 33px;
 }
 
+.header__burger-btn{
+    display: none;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border: none;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.header__burger-btn span{
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: black;
+    left: 5px;
+    top: 5px
+}
+
+.header__burger-btn span:nth-child(2){
+    transform: translateY(10px);
+}
+
+.header__burger-btn span:nth-child(3){
+    transform: translateY(20px);
+}
+
 .header_links{
     padding-bottom: 31px;
     border-bottom: 1px solid #828282;
@@ -208,6 +235,64 @@ footer{
 
 /* для мобильной версии */
 @media (max-width:980px) {
+    header{
+        justify-content: left;
+        padding-left: 15px;
+    }
+    .header_links{
+        border-bottom: none;
+        transition: transform .5s;
+    }
+
+    .header__burger-btn{
+        display: block;
+    }
+
+    .header_links{
+        position: absolute;
+        left: -300px;
+        top: 0;
+        padding: 100px 60px 20px 20px;
+    }
+
+    .header{
+        transition: margin-bottom .5s;
+    }
+
+    .header.open{
+        transition: margin-bottom .5s;
+    }
+
+    .header__link{
+        display: block;
+    }
+    
+    header.open .header_links{
+        transform: translateX(100%);
+    }
+
+    .header.open{
+        margin-bottom: 390px;
+    }
+
+    .header.open span{
+        transition: opacity .5s, transform .5s;
+    }
+
+    .header.open span:nth-child(1){
+        transform: translateY(10px);
+        transform: rotate(-45deg);
+    }
+    .header.open span:nth-child(2){
+        transform: rotate(45deg);
+    }
+
+    .header.open span:nth-child(3){
+        transform: translateY(10px);
+        opacity: 0;
+    }
+
+
     .text_info{
         margin-left: 20px;
         flex-direction: column;
